--- a/index.html
+++ b/index.html
@@ -104,9 +104,14 @@
 					<div class="watching-item"><!--Currently Watching-->
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
-							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->							
-							<a class="tile" href="https://kitsu.io/anime/honzuki-no-gekokujou-shisho-ni-naru-tame-ni-wa-shudan-wo-erandeiraremasen-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/43607/poster_image/large-db18bd93dd3d498174d938526f07c153.jpeg" alt="Ascendance of a Bookworm 3rd Season"></img></a>							
+							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->														
 							<a class="tile" href="https://kitsu.io/anime/kanojo-okarishimasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/43588/poster_image/large-2be9442ddd7bd13ed91a0dfd35d2652f.jpeg" alt="Rent-a-Girlfriend 2nd Season"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/overlord-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44529/poster_image/large-d0683b94779e1ca0078b0dfde25443d7.jpeg" alt="Overlord IV"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shadows-house-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/45155/poster_image/large-761c07e52f68a41b92e8fe2aa0ea6667.jpeg" alt="Shadows House 2nd Season"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kuro-no-shoukanshi"><img class="tile-image" src="https://media.kitsu.io/anime/45884/poster_image/large-440b2b11f508b045582bdbf663fdc9ac.jpeg" alt="Black Summoner"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/fantasy-bishoujo-juniku-ojisan-to"><img class="tile-image" src="https://media.kitsu.io/anime/44580/poster_image/large-a88c9583dc5f28a1fcb908b9a5007bc2.jpeg" alt="Life With an Ordinary Guy Who Reincarnated"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tensura-nikki-tensei-shitara-slime-datta-ken"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43089/large.jpg" alt="The Slime Diaries:"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/jahy-sama-wa-kujikenai"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44392/large.jpg" alt="The Great Jahy Will Not Be Defeated!"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -143,6 +148,7 @@
 							<a class="tile" href="https://kitsu.io/anime/heike-monogatari"><img class="tile-image" src="https://media.kitsu.io/anime/45065/poster_image/large-b475fc55dafe220122603431bb731223.jpeg" alt="The Heike Story"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/ousama-ranking"><img class="tile-image" src="https://media.kitsu.io/anime/43849/poster_image/large-b836b0ea6db752c18cc8c9239f9a83c0.jpeg" alt="Ranking of Kings"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kaguya-sama-wa-kokurasetai-tensai-tachi-no-renai-zunousen-3"><img class="tile-image" src="https://media.kitsu.io/anime/43691/poster_image/large-6fff692359faff490ba00d72fb48b9a3.jpeg" alt="Kaguya-sama: Love is War - Ultra Romantic"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/taishou-otome-otogibanashi"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43817/large.jpg" alt="Taishou Otome Otogibanashi"></img></a>
 						</div><!-- tiled-list -->
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
@@ -151,8 +157,8 @@
 							<a class="tile" href="https://kitsu.io/anime/tate-no-yuusha-no-nariagari-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42530/large.jpg?1599926560" alt="The Rising of the Shield Hero 2"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-movie"><img class="tile-image" src="https://media.kitsu.io/anime/44229/poster_image/large-43d280867134345ce4ad5d9b985a54ca.jpeg" alt="The Quintessential Quintuplets Movie"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/yuusha-yamemasu"><img class="tile-image" src="https://media.kitsu.io/anime/45341/poster_image/large-fc835527eb5d210adc106d33f83fb083.jpeg" alt="I'm Quitting Heroing"></img></a>														
-							<a class="tile" href="https://kitsu.io/anime/kakkou-no-iinazuke"><img class="tile-image" src="https://media.kitsu.io/anime/44310/poster_image/large-59ca71bf57ad29baea920e368d5e69d3.jpeg" alt="A Couple of Cuckoos"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/tsuki-ga-michibiku-isekai-douchuu"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44297/large.jpg" alt="Tsukimichi -Moonlit Fantasy"></img></a>														
+							<a class="tile" href="https://kitsu.io/anime/kakkou-no-iinazuke"><img class="tile-image" src="https://media.kitsu.io/anime/44310/poster_image/large-59ca71bf57ad29baea920e368d5e69d3.jpeg" alt="A Couple of Cuckoos"></img></a>														
+							<a class="tile" href="https://kitsu.io/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44031/poster_image/large-0432f3657198d815bd3b6a1a01d2f718.jpeg" alt="Is It Wrong to Try to Pick Up Girls in a Dungeon? IV"></img></a>													
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 
@@ -161,11 +167,15 @@
 						<h3 class="section-subheading">Summer 2022</h3> 
 						<div class="tiled-list scrolling-tiled-list">	
 							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img class="tile-image" src="https://media.kitsu.io/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>																																											
-							<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44113/large.jpg?1615204263" alt=" The Devil is a Part-Timer! 2"></img></a>						
-							<a class="tile" href="https://kitsu.io/anime/overlord-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44529/poster_image/large-d0683b94779e1ca0078b0dfde25443d7.jpeg" alt="Overlord IV"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/shadows-house-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/45155/poster_image/large-761c07e52f68a41b92e8fe2aa0ea6667.jpeg" alt="Shadows House 2nd Season"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44031/poster_image/large-0432f3657198d815bd3b6a1a01d2f718.jpeg" alt="Is It Wrong to Try to Pick Up Girls in a Dungeon? IV"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44113/large.jpg?1615204263" alt=" The Devil is a Part-Timer! 2"></img></a>																										
 							<a class="tile" href="https://kitsu.io/anime/youkoso-jitsuryoku-shijou-shugi-no-kyoushitsu-e-zoku-hen"><img class="tile-image" src="https://media.kitsu.io/anime/45925/poster_image/large-77457d762ad53ee8121c5f3546b23228.jpeg" alt="Classroom of the Elite 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/natsume-yuujinchou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/3453/large.jpg" alt="Natsume's Book of Friends"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/isekai-yakkyoku"><img class="tile-image" src="https://media.kitsu.io/anime/44900/poster_image/large-f6bcf79aca262d5559a3e2196c6ad84e.jpeg" alt="Parallel World Pharmacy"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/rwby-ice-queendom"><img class="tile-image" src="https://media.kitsu.io/anime/45997/poster_image/large-fd40fa74c3dfcf67cab02c3250a60ced.jpeg" alt="RWBY: Ice Queendom"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/saikin-yatotta-maid-ga-ayashii"><img class="tile-image" src="https://media.kitsu.io/anime/46135/poster_image/large-fe7a30271f5ff9a0351f7bc8b813095b.jpeg" alt="The Maid I Recently Hired is Mysterious"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/lycoris-recoil"><img class="tile-image" src="https://media.kitsu.io/anime/45705/poster_image/large-cc78d70c11671d2e76ce9f4cf6fa7e66.jpeg" alt="Lycoris Recoil"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/engage-kiss"><img class="tile-image" src="https://media.kitsu.io/anime/46013/poster_image/large-dc03ed927ccc3cf9b27833d9f064369e.jpeg" alt="Engage Kiss"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/isekai-meikyuu-de-harem-wo"><img class="tile-image" src="https://media.kitsu.io/anime/43911/poster_image/large-8cc68503f4272d6ab4a1b2e36254d4af.jpeg" alt="Harem in the Labyrinth of Another World"></img></a>						
 						</div><!-- tiled-list -->
 					
 						<h3 class="section-subheading">Later 2022</h3> 
@@ -461,10 +471,11 @@
 								<a class="tile" href="https://myanimelist.net/character/163811/Myne"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Myne_large.jpg" alt="Myne"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/111045/Anzu"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Anzu_large.jpg" alt="Anzu"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/169955/Emilico"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Emilico_large.jpg" alt="Emilico"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/159166/Catarina_Claes"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Catarina-Claes_large.jpg" alt="Catarina Claes"></img></a>															
+								<a class="tile" href="https://myanimelist.net/character/170256/Anya_Forger"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Anya-Forger_large.jpg" alt="Anya Forger"></img></a>
 
 								<!--
 									<a class="tile" href="https://myanimelist.net/character/174332/Maple"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maple_large.jpg" alt="Maple"></img></a>
+									<a class="tile" href="https://myanimelist.net/character/159166/Catarina_Claes"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Catarina-Claes_large.jpg" alt="Catarina Claes"></img></a>
 								-->
 							</div>
 						</div><!---->		
@@ -485,7 +496,7 @@
 					<div class="favorite-item"><!--Male Characters-->
 						<h2 class="section-heading">Male Characters</h2>
 						<div class="tiled-list">
-							<a class="tile" href="https://myanimelist.net/character/8455/Death_the_Kid/pictures"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Death-the-Kid_large.jpg" alt="Death the Kid"></img></a>
+							<a class="tile" href="https://myanimelist.net/character/8455/Death_the_Kid"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Death-the-Kid_large.jpg" alt="Death the Kid"></img></a>
 							<a class="tile" href="https://myanimelist.net/character/11/Edward_Elric?q=edward%20e"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Edward-Elric_large.jpg" alt="Edward Elric"></img></a>
 							<a class="tile" href="https://myanimelist.net/character/417/Lelouch_Lamperouge"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Lelouch_large.jpg" alt="Lelouch "></img></a>
 							<a class="tile" href="https://myanimelist.net/character/2075/Kamina?q=kamina"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Kamina_large.jpg" alt="Kamina"></img></a>
@@ -516,14 +527,16 @@
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/zzJ8U8OtEsE"><span class="OP_ED-anime">Soul Eater,</span><span class="OP_ED-title">"Resonance" by T.M. Revolution</span></a></div>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/lkdi6eK05OA"><span class="OP_ED-anime">Your Lie in April,</span><span class="OP_ED-title">"Hikaru Nara" by GooseHouse.</span></a></div>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/4J8jcI0WtzM"><span class="OP_ED-anime">Blood Blockade Battlefront,</span><span class="OP_ED-title">"Hello,world!" by Bump of Chicken</span></a></div>
-						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/Eq6EYcpWB_c"><span class="OP_ED-anime">Samurai Champloo,</span><span class="OP_ED-title">"Battlecry" by Nujabes feat. Shing02</span></a></div>
-						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/6CBp4qylX6I"><span class="OP_ED-anime">No Game No Life,</span><span class="OP_ED-title">"This Game" by Konomi Suzuki</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/Eq6EYcpWB_c"><span class="OP_ED-anime">Samurai Champloo,</span><span class="OP_ED-title">"Battlecry" by Nujabes feat. Shing02</span></a></div>						
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/EzGs8Tm_C2g"><span class="OP_ED-anime">SPY x FAMILY,</span><span class="OP_ED-title">"Mixed Nuts" by Official Hige Dandism</span></a></div>						
 						<button onclick="more_OP_ED_item_op_btn()" id="more_OP_ED_item_op_btn" class="btn-pill-full-width">Show more</button>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/6CBp4qylX6I"><span class="OP_ED-anime">No Game No Life,</span><span class="OP_ED-title">"This Game" by Konomi Suzuki</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/UjjTMNDZi-A"><span class="OP_ED-anime">Death Parade,</span><span class="OP_ED-title">"Flyers" by BRADIO</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/atxYe-nOa9w"><span class="OP_ED-anime">One Punch Man,</span><span class="OP_ED-title">"The Hero!! Set Fire to the Furious Fist" by JAM Project</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/Ef_ZfhqN-ls"><span class="OP_ED-anime">New Game!,</span><span class="OP_ED-title">"Sakura Skip" by Fourfolium</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/SaKdpMnwZf0"><span class="OP_ED-anime">Domestic Girlfriend,</span><span class="OP_ED-title">"Kawaki wo Ameku" by Minami</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/7-EwChG1WTA"><span class="OP_ED-anime">Laid-Back Camp,</span><span class="OP_ED-title">"SHINY DAYS" by Asaka</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/rIWYrjXs4b4"><span class="OP_ED-anime">Skeleton Knight in Another World,</span><span class="OP_ED-title">"Aa Waga Roman no Michi Yo" by PelleK</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/Ln6NpxYb73k"><span class="OP_ED-anime">Recovery of an MMO Junkie,</span><span class="OP_ED-title">"Saturday Night Question" by Megumi Nakajima</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/4evV8Fr5A8U"><span class="OP_ED-anime">Black Clover,</span><span class="OP_ED-title">"Black Catcher" by Vickeblanka</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/aJRu5ltxXjc"><span class="OP_ED-anime">Naruto Shippuden,</span><span class="OP_ED-title">"Blue Bird" by Ikimono Gakari</span></a></div>
@@ -546,6 +559,7 @@
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/-rokG9XS37w"><span class="OP_ED-anime">Kaguya-sama: Love is War,</span><span class="OP_ED-title">"Chikatto Chika Chika♡"</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/o05UK9lXtC0"><span class="OP_ED-anime">Attack on Titan Season 3,</span><span class="OP_ED-title">"Requiem der Morgenröte" by Linked Horizon</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/TERi1b3ISdk"><span class="OP_ED-anime">Restaurant to Another World Season 2,</span><span class="OP_ED-title">"Samenai Mahou" by Nao Toyama</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/KtsvxCnJBLs"><span class="OP_ED-anime">Skeleton Knight in Another World,</span><span class="OP_ED-title">"Bokura ga Oroka da Nante Dare ga Itta" by Dialogue+</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/gIGEbitYqL0"><span class="OP_ED-anime">Re:Zero,</span><span class="OP_ED-title">"Styx Helix" by Myth and Roid</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/VneknudkhAk"><span class="OP_ED-anime">Log Horizon Season 2,</span><span class="OP_ED-title">"Wonderful Wonder World" by Yun*chi</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/AubeXRKtU8U"><span class="OP_ED-anime">Konosuba Season 2,</span><span class="OP_ED-title">"Ouchi ni Kaeritai" by Amamiya, Takahashi, and Kayano</span></a></div>
