--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->														
 							<a class="tile" href="https://kitsu.io/anime/kanojo-okarishimasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/43588/poster_image/large-2be9442ddd7bd13ed91a0dfd35d2652f.jpeg" alt="Rent-a-Girlfriend 2nd Season"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/overlord-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44529/poster_image/large-d0683b94779e1ca0078b0dfde25443d7.jpeg" alt="Overlord IV"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shadows-house-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/45155/poster_image/large-761c07e52f68a41b92e8fe2aa0ea6667.jpeg" alt="Shadows House 2nd Season"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kuro-no-shoukanshi"><img class="tile-image" src="https://media.kitsu.io/anime/45884/poster_image/large-440b2b11f508b045582bdbf663fdc9ac.jpeg" alt="Black Summoner"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shadows-house-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/45155/poster_image/large-761c07e52f68a41b92e8fe2aa0ea6667.jpeg" alt="Shadows House 2nd Season"></img></a>						
 							<a class="tile" href="https://kitsu.io/anime/fantasy-bishoujo-juniku-ojisan-to"><img class="tile-image" src="https://media.kitsu.io/anime/44580/poster_image/large-a88c9583dc5f28a1fcb908b9a5007bc2.jpeg" alt="Life With an Ordinary Guy Who Reincarnated"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tensura-nikki-tensei-shitara-slime-datta-ken"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43089/large.jpg" alt="The Slime Diaries:"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/isekai-yakkyoku"><img class="tile-image" src="https://media.kitsu.io/anime/44900/poster_image/large-f6bcf79aca262d5559a3e2196c6ad84e.jpeg" alt="Parallel World Pharmacy"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/jahy-sama-wa-kujikenai"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44392/large.jpg" alt="The Great Jahy Will Not Be Defeated!"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
@@ -153,12 +153,13 @@
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">																										
-							<a class="tile" href="https://kitsu.io/anime/kawaii-dake-ja-nai-shikimori-san"><img class="tile-image" src="https://media.kitsu.io/anime/44159/poster_image/large-c7c3ffa72fbf7b84eb2a5988281af979.jpeg" alt="Shikimori's Not Just a Cutie"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tate-no-yuusha-no-nariagari-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42530/large.jpg?1599926560" alt="The Rising of the Shield Hero 2"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-movie"><img class="tile-image" src="https://media.kitsu.io/anime/44229/poster_image/large-43d280867134345ce4ad5d9b985a54ca.jpeg" alt="The Quintessential Quintuplets Movie"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/yuusha-yamemasu"><img class="tile-image" src="https://media.kitsu.io/anime/45341/poster_image/large-fc835527eb5d210adc106d33f83fb083.jpeg" alt="I'm Quitting Heroing"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/kakkou-no-iinazuke"><img class="tile-image" src="https://media.kitsu.io/anime/44310/poster_image/large-59ca71bf57ad29baea920e368d5e69d3.jpeg" alt="A Couple of Cuckoos"></img></a>														
-							<a class="tile" href="https://kitsu.io/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44031/poster_image/large-0432f3657198d815bd3b6a1a01d2f718.jpeg" alt="Is It Wrong to Try to Pick Up Girls in a Dungeon? IV"></img></a>													
+							<a class="tile" href="https://kitsu.io/anime/kuro-no-shoukanshi"><img class="tile-image" src="https://media.kitsu.io/anime/45884/poster_image/large-440b2b11f508b045582bdbf663fdc9ac.jpeg" alt="Black Summoner"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/natsume-yuujinchou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/3453/large.jpg" alt="Natsume's Book of Friends"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44113/large.jpg?1615204263" alt=" The Devil is a Part-Timer! 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/youkoso-jitsuryoku-shijou-shugi-no-kyoushitsu-e-zoku-hen"><img class="tile-image" src="https://media.kitsu.io/anime/45925/poster_image/large-9e910dea34c2846be2ba92b91bb2dcf2.jpeg" alt="Classroom of the Elite 2"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 
@@ -166,23 +167,21 @@
 						<h2 class="section-heading">Most Anticipated</h2>
 						<h3 class="section-subheading">Summer 2022</h3> 
 						<div class="tiled-list scrolling-tiled-list">	
-							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img class="tile-image" src="https://media.kitsu.io/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>																																											
-							<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44113/large.jpg?1615204263" alt=" The Devil is a Part-Timer! 2"></img></a>																										
-							<a class="tile" href="https://kitsu.io/anime/youkoso-jitsuryoku-shijou-shugi-no-kyoushitsu-e-zoku-hen"><img class="tile-image" src="https://media.kitsu.io/anime/45925/poster_image/large-77457d762ad53ee8121c5f3546b23228.jpeg" alt="Classroom of the Elite 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/natsume-yuujinchou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/3453/large.jpg" alt="Natsume's Book of Friends"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/isekai-yakkyoku"><img class="tile-image" src="https://media.kitsu.io/anime/44900/poster_image/large-f6bcf79aca262d5559a3e2196c6ad84e.jpeg" alt="Parallel World Pharmacy"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44031/poster_image/large-0432f3657198d815bd3b6a1a01d2f718.jpeg" alt="Is It Wrong to Try to Pick Up Girls in a Dungeon? IV"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img class="tile-image" src="https://media.kitsu.io/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/yofukashi-no-uta"><img class="tile-image" src="https://media.kitsu.io/anime/45483/poster_image/large-d9d78c62b3f81a732df8d44f158a0c11.jpeg" alt="Call of the Night"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/rwby-ice-queendom"><img class="tile-image" src="https://media.kitsu.io/anime/45997/poster_image/large-fd40fa74c3dfcf67cab02c3250a60ced.jpeg" alt="RWBY: Ice Queendom"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/saikin-yatotta-maid-ga-ayashii"><img class="tile-image" src="https://media.kitsu.io/anime/46135/poster_image/large-fe7a30271f5ff9a0351f7bc8b813095b.jpeg" alt="The Maid I Recently Hired is Mysterious"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/lycoris-recoil"><img class="tile-image" src="https://media.kitsu.io/anime/45705/poster_image/large-cc78d70c11671d2e76ce9f4cf6fa7e66.jpeg" alt="Lycoris Recoil"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/engage-kiss"><img class="tile-image" src="https://media.kitsu.io/anime/46013/poster_image/large-dc03ed927ccc3cf9b27833d9f064369e.jpeg" alt="Engage Kiss"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/isekai-meikyuu-de-harem-wo"><img class="tile-image" src="https://media.kitsu.io/anime/43911/poster_image/large-8cc68503f4272d6ab4a1b2e36254d4af.jpeg" alt="Harem in the Labyrinth of Another World"></img></a>						
+							<a class="tile" href="https://kitsu.io/anime/isekai-meikyuu-de-harem-wo"><img class="tile-image" src="https://media.kitsu.io/anime/43911/poster_image/large-8cc68503f4272d6ab4a1b2e36254d4af.jpeg" alt="Harem in the Labyrinth of Another World"></img></a>													
 						</div><!-- tiled-list -->
 					
 						<h3 class="section-subheading">Later 2022</h3> 
 						<div class="tiled-list scrolling-tiled-list">																
-							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-6th-season"><img class="tile-image" src="https://media.kitsu.io/anime/45240/poster_image/large-2b0792a8225a20a7f24306616f0396b4.jpeg" alt="My Hero Academia 6"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-guren-no-kizuna"><img class="tile-image" src="https://media.kitsu.io/anime/45231/poster_image/large-2f36407294ba9545dd39277b9b006b57.jpeg" alt="That Time I Got Reincarnated as a Slime: Scarlet Bonds"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/sword-art-online-progressive-movie-kuraki-yuuyami-no-scherzo"><img class="tile-image" src="https://media.kitsu.io/anime/45400/poster_image/large-4f7e5c2f5f11395aa2fa0ca4a201915b.jpeg" alt="Sword Art Online the Movie -Progressive- Scherzo of Deep Night"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/sword-art-online-progressive-movie-kuraki-yuuyami-no-scherzo"><img class="tile-image" src="https://media.kitsu.io/anime/45400/poster_image/large-1be74b8318266887d1fc1c01cf6998a9.jpeg" alt="Sword Art Online the Movie -Progressive- Scherzo of Deep Night"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-6th-season"><img class="tile-image" src="https://media.kitsu.io/anime/45240/poster_image/large-4b3a4767d6ee73bd5ba48e7ffbc06f08.jpeg" alt="My Hero Academia 6"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-guren-no-kizuna"><img class="tile-image" src="https://media.kitsu.io/anime/45231/poster_image/large-2f36407294ba9545dd39277b9b006b57.jpeg" alt="That Time I Got Reincarnated as a Slime: Scarlet Bonds"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/bleach-sennen-kessen-hen"><img class="tile-image" src="https://media.kitsu.io/anime/43078/poster_image/large-8f9174133bee5f4fb0b6d2be6a7f6465.jpeg" alt="Bleach: Thousand-Year Blood War"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/mob-psycho-100-iii"><img class="tile-image" src="https://media.kitsu.io/anime/45338/poster_image/large-b7ba28948da84b740c9ae7882b365fb9.jpeg" alt="Mob Psycho 100 III"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/spy-x-family-part-2"><img class="tile-image" src="https://media.kitsu.io/anime/45619/poster_image/large-66977f7fc447cc0a4439c294c0143b4c.jpeg" alt="SPY x FAMILY Part 2"></img></a>
