--- a/index.html
+++ b/index.html
@@ -40,26 +40,8 @@
 					<a href="https://kitsu.io/users/heyKPerks" id="bio-social-kitsu"class="bio-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
 					<a href="https://twitter.com/heyKPerks" id="bio-social-twitter"class="bio-social-item"><i class="fab fa-twitter"></i></a>
 					<a href="" id="bio-social-discord"class="bio-social-item"><i class="fab fa-discord"></i></a>
-
-					<!--
-					<button id="social_discord_btn" class="bio-social-item"><i class="fab fa-discord"></i></button>													
-						<!-- The Modal 
-						<div id="discord_modal" class="modal">
-							<!-- Modal content 
-							<div class="modal-content">
-								<h2><i class="fab fa-discord"></i> Discord</h2>
-								<div>
-									<h3>DM's Are Open</h3>
-									<span>heyKPerks</span>
-								</div>
-								<div>
-									<h3>Join My Server</h3>
-									<span>PerksPlace</span>
-								</div>
-								<button id="close_discord_modal">Close</button>
-							</div>					
-						</div>						
-					-->
+					
+					<!--<button id="social_discord_btn" class="bio-social-item"><i class="fab fa-discord"></i></button>-->
 				</div>
 			</div><!-- bio -->
 
@@ -1142,5 +1124,33 @@
 			</div>
 			<!-- footer -->
 		</div><!--pagewrapper-->
+
+		<!-- Modals -->
+		<!--
+		<div id="discord_modal_container" class="modal-container">
+			<div id="discord_modal_content">
+				<h2 class="modal-heading"><i class="fab fa-discord"></i> Discord</h2>
+				<h3 class="modal-subheading">DM's Are Open</h3>	
+				<div class="discord-modal-item">
+					<div class="discord-modal-item-label">
+						<img loading="Lazy" class="discord-modal-item-image" src="assets/images/KP.png" alt="heykperks logo"></img>
+						<span class="discord-modal-item-text">heyKPerks<span id="discord_num">#4655</span></span>
+					</div>
+					<button class="discord-modal-btn">Copy</button>
+				</div>				
+				<h3 class="modal-subheading">Join My Server</h3>					
+				<div class="discord-modal-item">
+					<div class="discord-modal-item-label">
+						<img loading="Lazy" class="discord-modal-item-image" src="assets/images/perksplace.png" alt="heykperks logo"></img>
+						<span class="discord-modal-item-text">PerksPlace</span>
+					</div>
+					<button class="discord-modal-btn">Join</button>
+				</div>				
+				<button id="discord_modal_btn_close" class="modal-btn-close">Close</button>
+			</div>
+		</div>
+		-->
+		<!-- Discord Modals Container -->
+
 	</body>
 </html>
