Updated social links and buttons
Updated socials both in bio and footer to flex rather than inlineblock. Additionally styled discord button.

--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
 				<p id="biotext">I crave visually pleasing art and enjoyable characters, but overall an immersive story. I'm a sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; with the occasional trash.</p>
 				<div id="bio_socials">
 					<a href="https://kitsu.io/users/heyKPerks" id="bio-social-kitsu"class="bio-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
-					<a href="https://twitter.com/heyKPerks" id="bio-social-twitter"class="bio-social-item"><i class="fab fa-twitter"></i></a>
-					<a href="" id="bio-social-discord"class="bio-social-item"><i class="fab fa-discord"></i></a>
-					
-					<!--<button id="social_discord_btn" class="bio-social-item"><i class="fab fa-discord"></i></button>-->
+					<a href="https://twitter.com/heyKPerks" id="bio-social-twitter"class="bio-social-item"><i class="fab fa-twitter"></i></a>						
+					<button id="social_discord_btn" class="bio-social-item"><i class="fab fa-discord"></i></button>
+					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="bio_social-github"class="bio-social-item"><i class="fab fa-github"></i></a>
 				</div>
 			</div><!-- bio -->
 
@@ -1117,7 +1116,7 @@
 				<div id="footer_socials">
 					<a href="https://kitsu.io/users/heyKPerks" id="footer_social-kitsu"class="footer-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
 					<a href="https://twitter.com/heyKPerks" id="footer_social-twitter"class="footer-social-item"><i class="fab fa-twitter"></i></a>
-					<a href="" id="footer_social-discord" class="footer-social-item"><i class="fab fa-discord"></i></a>										
+					<button id="footer_social_discord_btn" class="bio-social-item"><i class="fab fa-discord"></i></button>
 					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="footer_social-github"class="footer-social-item"><i class="fab fa-github"></i></a>
 				</div>
 				<p class="copyright">&copy; 2022, All right reserved</p>
@@ -1148,8 +1147,7 @@
 				</div>				
 				<button id="discord_modal_btn_close" class="modal-btn-close">Close</button>
 			</div>
-		</div>
-		-->
+		</div> -->
 		<!-- Discord Modals Container -->
 
 	</body>
