--- a/index.html
+++ b/index.html
@@ -1129,22 +1129,20 @@
 		<div id="discord_modal_container" class="modal-container">
 			<div id="discord_modal_content">
 				<h2 class="modal-heading"><i class="fab fa-discord"></i> Discord</h2>
-				<h3 class="modal-subheading">DM's Are Open</h3>	
-				<div class="discord-modal-item">
-					<div class="discord-modal-item-label">
+				<div class="dicord-modal-item-grid">
+					<div class="discord-modal-item">				
+						<h3 class="dicord-modal-item-heading">DM's Are Open</h3>	
 						<img loading="Lazy" class="discord-modal-item-image" src="assets/images/KP.png" alt="heykperks logo"></img>
 						<span class="discord-modal-item-text">heyKPerks<span id="discord_num">#4655</span></span>
-					</div>
-					<button onclick="copy_discord_name()" class="discord-modal-btn">Copy</button>
-				</div>				
-				<h3 class="modal-subheading">Join My Server</h3>					
-				<div class="discord-modal-item">
-					<div class="discord-modal-item-label">
+						<button onclick="copy_discord_name()" class="discord-modal-btn">Copy</button>
+					</div>				
+					<div class="discord-modal-item">													
+						<h3 class="dicord-modal-item-heading">Join My Server</h3>		
 						<img loading="Lazy" class="discord-modal-item-image" src="assets/images/perksplace.png" alt="heykperks logo"></img>
 						<span class="discord-modal-item-text">PerksPlace</span>
+						<button onclick="window.location.href='https://discord.gg/gQ3SKfn';" class="discord-modal-btn">Join</button>
 					</div>
-					<button onclick="window.location.href='https://discord.gg/gQ3SKfn';" class="discord-modal-btn">Join</button>
-				</div>				
+				</div>
 				<button onclick="close_discord_modal()" id="discord_modal_btn_close" class="modal-btn-close">Close</button>
 			</div>
 		</div> 
